# red-republic

./: .gitignore  AGENTS.md  CLAUDE.md  eslint.config.js  index.html  package.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: ui-guards.test.ts
src/app/: screens.ts  session.ts  settings.ts
src/app/__tests__/: screens.test.ts  session.test.ts  settings.test.ts
src/audio/: arrange.ts  audio-system.ts  event-sounds.ts  format.ts  index.ts  music-theory.ts  music.ts  playlist.ts  sfx.ts  tracks.ts  ui-catalog.ts  ui-sounds.ts
src/audio/__tests__/: arrange.test.ts  event-sounds.test.ts  format.test.ts  music-determinism.test.ts  music-theory.test.ts  playlist.test.ts  recording-context.ts  (+1 more)
src/components/: BottomBar.tsx  BuildMenu.tsx  GameCanvas.tsx  HUD.tsx  MasterConstructionMenu.tsx  MusicPanel.tsx  Overlays.tsx  SidePanel.tsx  UpdateBanner.tsx
src/game/: config.ts  demo.ts  engine.ts  format.ts  input.ts  mapgen.ts  pathfind.ts  render.ts  save-format.ts  save-slots.ts  selection.ts  tilemap-cache.ts  topology.ts  weather.ts
src/hooks/: use-autosave.ts  use-engine.ts  use-focus-trap.ts  use-music.ts  use-settings.ts  use-toasts.ts
src/platform/: desktop.ts  local-storage-driver.ts  storage.ts  tauri-fs-backend.ts  tauri-fs-driver.ts
src/ui/: GameIcon.tsx  build-cost.ts  icons.ts
(+60 files in other folders)
